# spotifyplusplus

./: CMakeLists.txt  README.md  main.cpp
Auth/: auth.hpp
socket/: socket.hpp
